fixed footer styling and other small styling edits

--- a/blog.html
+++ b/blog.html
@@ -199,8 +199,10 @@
             <h5>Twitter widget</h5>
             <form action="">
                 <label for="email">Signup for emails and notifications below.</label>
-                <input type="email" placeholder="Enter your email">
-                <button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+                <div class="footer__form--email">
+                    <input type="email" placeholder="Enter your email"><button type="submit"><i
+                            class="fas fa-long-arrow-alt-right"></i></button>
+                </div>
             </form>
         </div>
     </div>
