--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
         <section id="team" class="team">
             <div class="wrapper">
+                <div class="line"></div>
                 <h3>Meet Our Team</h3>
                 <div class="team__container">
                     <div class="team__container--description">
@@ -211,8 +212,9 @@
                 <h5>Twitter widget</h5>
                 <form action="">
                     <label for="email">Signup for emails and notifications below.</label>
-                    <input type="email" placeholder="Enter your email">
-                    <button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+                    <div class="footer__form--email">
+                        <input type="email" placeholder="Enter your email"><button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+                    </div>
                 </form>
             </div>
         </div>
