fixed some styling for blog.html

--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
     <title>Creative</title>
 </head>
 <body>
-    <header id="header-blog">
+    <header id="header__blog">
         <div class="wrapper">
             <nav class="navigation">
                 <div class="navigation__container">
@@ -41,27 +41,27 @@
     <article class="article">
         <div class="wrapper">
             <h2>How to run a creative agency</h2>
-            <p class="article__link"><a href="index.html">Home</a>/<a href="blog.html">Blog</a>/How to Run a Creative Agency</p>
-            <div class="article__information--container">
+            <p class="article__link"><a href="index.html">Home / </a><a href="blog.html">Blog / </a> How to Run a Creative Agency</p>
+            <div class="article__container">
                 <div class="article__information">
-                    <div class="article__information--author">
+                    <div class="article__author">
                         <img src="./assets/blog-2.jpeg" alt="">
-                        <div class="article__information--author--info">
+                        <div class="article__author--info">
                             <h3>Alex</h3>
                             <p>Administrator</p>
                         </div>
                     </div>
                 </div>
                 <div class="article__information">
-                    <div class="article__information--date">
+                    <div class="article__date">
                         <h3>Date</h3>
                         <p>July 31, 2018</p>
                     </div>
-                    <div class="article__information--category">
+                    <div class="article__category">
                         <h3>Category</h3>
                         <p>Entertainment, Business</p>
                     </div>
-                    <div class="article__information--tags">
+                    <div class="article__tags">
                         <h3>Tags</h3>
                         <p>Design, Web, Lifestyle, Site</p>
                     </div>
