added media some queries

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="wrapper">
                 <div class="slider__container">
                     <i class="fas fa-angle-left"></i>
-                    <img src="./assets/home-3.jpeg" alt="" class="slider__container--image">
+                    <img src="./assets/home-3.jpeg" alt="A image of a male model in a magazine article" class="slider__container--image">
                     <i class="fas fa-angle-right"></i>
                 </div>
                 <p>
@@ -176,7 +176,11 @@
                 </p>
                 <button>View Portfolio</button>
             </div>
-            <img src="./assets/home-10.jpeg" alt="">
+            <img 
+                src="./assets/home-10.jpeg" 
+                alt="An image showing a smartphone, coffee, and a folder full of documents on a desk."
+                class="contact__image"
+                >
         </section>
     </main>
     <footer class="footer">
