fixed wrapper issues, created mixins, moved partials to correct place

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     </header>
     <section id="contact__title" class="contact">
         <div class="contact__container">
-            <img src="./assets/contact-1.jpeg" alt="" class="contact__image">
+            <img src="./assets/contact-1.jpeg" alt="" class="contact__title--image">
             <div class="wrapper">
                 <h2>Contact <span>Us</span></h2>
                 <div class="contact__title--details">
