--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <li class="navigation__item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
                     </ul>
                 </div>
+                <i class="fas fa-bars"></i>
             </nav>
         </div>
     </header>
@@ -156,11 +157,9 @@
                     </div>
                     <img src="./assets/home-5.jpeg" alt="">
                     <img src="./assets/home-6.jpeg" alt="">
-                    <div class="team__container--images">
-                        <img src="./assets/home-7.jpeg" alt="">
-                        <img src="./assets/home-8.jpeg" alt="">
-                        <img src="./assets/home-9.jpeg" alt="">
-                    </div>
+                    <img src="./assets/home-7.jpeg" alt="">
+                    <img src="./assets/home-8.jpeg" alt="">
+                    <img src="./assets/home-9.jpeg" alt="">
                     <p class="team__container--join">Want to work with us!</p>
                 </div>
             </div>
