added some media queries for blog page, fixed some styling

--- a/blog.html
+++ b/blog.html
@@ -35,6 +35,7 @@
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
                     </ul>
                 </div>
+                <i class="fas fa-bars"></i>
             </nav>
         </div>
     </header>
@@ -112,15 +113,21 @@
             <h2>Related Posts</h2>
             <div class="posts__container">
                 <div class="posts__post">
-                    <img src="./assets/blog-3.jpeg" alt="">
+                    <img 
+                        src="./assets/blog-3.jpeg" 
+                        alt="An image of a desk with a lamp, a few house plants, a pair of glasses, and a laptop.">
                     <p>July, 25, 2018</p>
                 </div>
                 <div class="posts__post">
-                    <img src="./assets/blog-4.jpeg" alt="">
+                    <img 
+                        src="./assets/blog-4.jpeg" 
+                        alt="An image of a desk with a couple of plants, a giant decorative 'A' letter, and several unlit candles.">
                     <p>July, 26, 2018</p>
                 </div>
                 <div class="posts__post">
-                    <img src="./assets/blog-5.jpeg" alt="">
+                    <img 
+                        src="./assets/blog-5.jpeg" 
+                        alt="An close-up image of a smartphone, laptop keyboard, and small plant.">
                     <p>July, 28, 2018</p>
                 </div>
             </div>
@@ -132,7 +139,7 @@
             <h2>02 Comments</h2>
             <div class="comment">
                 <div class="comment__image">
-                    <img src="./assets/blog-6.jpeg" alt="">
+                    <img src="./assets/blog-6.jpeg" alt="An profile picture of a red haired woman.">
                 </div>
                 <div class="comment__container">
                     <h3 class="comment__name">Daniel Vandaft <span><a href="#"> - reply</a></span></h3>
@@ -143,7 +150,7 @@
             </div>
             <div class="comment">
                 <div class="">
-                    <img src="./assets/blog-7.jpeg" alt="">
+                    <img src="./assets/blog-7.jpeg" alt="A profile picture of a smiling man in a white shirt.">
                 </div>
                 <div class="comment__container">
                     <h3 class="comment__name">Daniel Vandaft <span><a href="#"> - reply</a></span></h3>
