--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,15 @@
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
                     </ul>
                 </div>
+                <i class="fas fa-bars"></i>
             </nav>
     </header>
     <section id="contact__title" class="contact">
         <div class="contact__container">
-            <img src="./assets/contact-1.jpeg" alt="" class="contact__title--image">
+            <img 
+                src="./assets/contact-1.jpeg" 
+                alt="A close-up image of a keyboard and plant." 
+                class="contact__image">
             <div class="wrapper">
                 <h2>Contact <span>Us</span></h2>
                 <div class="contact__title--details">
@@ -82,7 +86,10 @@
                         </form>
                     </div>
                 </section>
-                <img src="./assets/contact-2.jpeg" alt="" class="contact__image">
+                <img 
+                    src="./assets/contact-2.jpeg" 
+                    alt="An image of a woman smiling while talking on the phone." 
+                    class="contact__image">
             </div>
         </div>
     </section>
@@ -120,7 +127,7 @@
                 <label for="email">Signup for emails and notifications below.</label>
                 <div class="footer__form--email">
                     <input type="email" placeholder="Enter your email"><button type="submit"><i
-                            class="fas fa-long-arrow-alt-right"></i></button>
+                    lass="fas fa-long-arrow-alt-right"></i></button>
                 </div>
             </form>
         </div>
