--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
         <section id="branding" class="branding">
             <div class="branding__image">
                 <div class="branding__image--top">
-                    <img src="./assets/home-circle-text.png" alt="" class="circle-img">
+                    <img 
+                        src="./assets/home-circle-text.png" 
+                        alt="An image depicting text in the shape of a circle." 
+                        class="circle-img">
                 </div>
                 <div class="branding__image--bottom">
-                    <img src="./assets/home-2.jpeg" alt="" class="homeImg-2">
+                    <img 
+                        src="./assets/home-2.jpeg" 
+                        alt="An image of a desk with a computer, a small plant, and a scent diffuser." 
+                        class="homeImg-2">
                 </div>
             </div>
             <div class="branding__content">
@@ -65,7 +71,10 @@
             <div class="wrapper">
                 <div class="slider__container">
                     <i class="fas fa-angle-left"></i>
-                    <img src="./assets/home-3.jpeg" alt="A image of a male model in a magazine article" class="slider__container--image">
+                    <img 
+                        src="./assets/home-3.jpeg" 
+                        alt="A image of a male model in a magazine article" 
+                        class="slider__container--image">
                     <i class="fas fa-angle-right"></i>
                 </div>
                 <p>
@@ -155,18 +164,18 @@
                             Deployment validation gen-z disruptive paradigm shift churn rate niche market graphical user interface.
                         </p>
                     </div>
-                    <img src="./assets/home-5.jpeg" alt="">
-                    <img src="./assets/home-6.jpeg" alt="">
-                    <img src="./assets/home-7.jpeg" alt="">
-                    <img src="./assets/home-8.jpeg" alt="">
-                    <img src="./assets/home-9.jpeg" alt="">
+                    <img src="./assets/home-5.jpeg" alt="An image of a male employee with a orange tie.">
+                    <img src="./assets/home-6.jpeg" alt="An image of a female employee with white short hair.">
+                    <img src="./assets/home-7.jpeg" alt="An image of a female employee with a striking arm tattoo.">
+                    <img src="./assets/home-8.jpeg" alt="An image of a male employee striking a powerful pose.">
+                    <img src="./assets/home-9.jpeg" alt="An image of a female employee with glasses, earrings, and pink suspenders.">
                     <p class="team__container--join">Want to work with us!</p>
                 </div>
             </div>
         </section>
 
-        <section id="contact" class="contact">
-            <div class="contact__content">
+        <section id="portfolio" class="portfolio">
+            <div class="portfolio__content">
                 <h4>Drop us a line</h4>
                 <p>
                     Pitch client interaction design ownership disruptive leverage prototype conversion.
@@ -178,7 +187,7 @@
             <img 
                 src="./assets/home-10.jpeg" 
                 alt="An image showing a smartphone, coffee, and a folder full of documents on a desk."
-                class="contact__image"
+                class="portfolio__image"
                 >
         </section>
     </main>
