small css tweaks

--- a/contact.html
+++ b/contact.html
@@ -23,14 +23,14 @@
                     <ul class="navigation__list">
                         <li class="navigation__list--item"><a href="index.html" class="link">Home</a></li>
                         <li class="navigation__list--item"><a href="blog.html" class="link">Blog</a></li>
-                        <li class="navigation__list--item"><a href="#" class="link">Portfolio</a></li>
+                        <li class="navigation__list--item"><a href="index.html#portfolio" class="link">Portfolio</a></li>
                     </ul>
                 </div>
                 <h1 class="navigation__logo"><a href="index.html">Creative</a></h1>
                 <div class="navigation__container">
                     <ul class="navigation__list">
                         <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
-                        <li class="navigation__list--item"><a href="#" class="link">Contact</a></li>
+                        <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
                     </ul>
