--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
                     <ul class="navigation__list">
                         <li class="navigation__list--item"><a href="index.html" class="link">Home</a></li>
                         <li class="navigation__list--item"><a href="blog.html" class="link">Blog</a></li>
-                        <li class="navigation__list--item"><a href="#" class="link">Portfolio</a></li>
+                        <li class="navigation__list--item"><a href="index.html#portfolio" class="link">Portfolio</a></li>
                     </ul>
                 </div>
                 <h1 class="navigation__logo"><a href="index.html">Creative</a></h1>
