--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul class="navigation__list">
                         <li class="navigation__item"><a href="index.html" class="link">Home</a></li>
                         <li class="navigation__item"><a href="blog.html" class="link">Blog</a></li>
-                        <li class="navigation__item"><a href="#" class="link">Portfolio</a></li>
+                        <li class="navigation__item"><a href="#portfolio" class="link">Portfolio</a></li>
                     </ul>
                 </div>
                 <h1 class="navigation__logo"><a href="index.html">Creative</a></h1>
@@ -41,6 +41,7 @@
     <main>
 
         <section id="branding" class="branding">
+            <div class="branding__line"></div>
             <div class="branding__image">
                 <div class="branding__image--top">
                     <img 
