small style changes

--- a/index.html
+++ b/index.html
@@ -43,13 +43,10 @@
         <section id="branding" class="branding">
             <div class="branding__line"></div>
             <div class="branding__image">
-                <div class="branding__image--top">
-                    <img 
-                        src="./assets/home-circle-text.png" 
-                        alt="An image depicting text in the shape of a circle." 
-                        class="circle-img">
-                </div>
                 <div class="branding__image--bottom">
+                    <div class="branding__image--top">
+                        <img src="./assets/home-circle-text.png" alt="An image depicting text in the shape of a circle." class="circle-img">
+                    </div>
                     <img 
                         src="./assets/home-2.jpeg" 
                         alt="An image of a desk with a computer, a small plant, and a scent diffuser." 
