changed team section to grid

--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
                             Deployment validation gen-z disruptive paradigm shift churn rate niche market graphical user interface.
                         </p>
                     </div>
-                    <img src="./assets/home-5.jpeg" alt="An image of a male employee with a orange tie.">
-                    <img src="./assets/home-6.jpeg" alt="An image of a female employee with white short hair.">
-                    <img src="./assets/home-7.jpeg" alt="An image of a female employee with a striking arm tattoo.">
-                    <img src="./assets/home-8.jpeg" alt="An image of a male employee striking a powerful pose.">
-                    <img src="./assets/home-9.jpeg" alt="An image of a female employee with glasses, earrings, and pink suspenders.">
+                    <img src="./assets/home-5.jpeg" class="team__container--image" alt="An image of a male employee with a orange tie.">
+                    <img src="./assets/home-6.jpeg" class="team__container--image" alt="An image of a female employee with white short hair.">
+                    <img src="./assets/home-7.jpeg" class="team__container--image" alt="An image of a female employee with a striking arm tattoo.">
+                    <img src="./assets/home-8.jpeg" class="team__container--image" alt="An image of a male employee striking a powerful pose.">
+                    <img src="./assets/home-9.jpeg" class="team__container--image" alt="An image of a female employee with glasses, earrings, and pink suspenders.">
                     <p class="team__container--join">Want to work with us!</p>
                 </div>
             </div>
