added pseudo element on shopping bag, hover animation on team element

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <img src="./assets/home-7.jpeg" class="team__container--image" alt="An image of a female employee with a striking arm tattoo.">
                     <img src="./assets/home-8.jpeg" class="team__container--image" alt="An image of a male employee striking a powerful pose.">
                     <img src="./assets/home-9.jpeg" class="team__container--image" alt="An image of a female employee with glasses, earrings, and pink suspenders.">
-                    <p class="team__container--join">Want to work with us!</p>
+                    <a href="contact.html" class="team__container--join"><p>Want to work with us?</p></a>
                 </div>
             </div>
         </section>
