--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
             <div class="article__container">
                 <div class="article__information">
                     <div class="article__author">
-                        <img src="./assets/blog-2.jpeg" alt="">
+                        <img src="./assets/blog-2.jpeg" alt="An image of alex, the suthor of this post.">
                         <div class="article__author--info">
                             <h3>Alex</h3>
                             <p>Administrator</p>
@@ -142,7 +142,7 @@
                     <img src="./assets/blog-6.jpeg" alt="An profile picture of a red haired woman.">
                 </div>
                 <div class="comment__container">
-                    <h3 class="comment__name">Daniel Vandaft <span><a href="#"> - reply</a></span></h3>
+                    <h3 class="comment__name">Jenifer Loopz <span><a href="#"> - reply</a></span></h3>
                     <p class="comment__text">Ecosystem iPad disruptive social media low hanging fruit stealth launch
                         party handshake market branding.</p>
                     <p class="comment__date">Jul 17, 2015 at 15 hours ago</p>
